@@ -22,6 +22,8 @@ New features:
 
 Bugs fixed:
 
+- 2948647 getObjectPath may dereference NULL pointer
+
 
 
 Changes in 1.3.7
