@@ -1,3 +1,8 @@
+2010-03-01 Sean Swehla <smswehla@linux.vnet.ibm.com>
+
+	* args.c, array.c, constClass.c, instance.c, internalProvider.c, objectpath.c:
+	[ 2948647 ] getObjectPath may dereference NULL pointer
+
 2010-02-25 Sean Swehla <smswehla@linux.vnet.ibm.com>
 
 	* extra/modelines, Makefile.am, *.c, *.h:
